{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 91,
  "lineage": "44d87b83-3343-1b9a-3452-14c37f353fb9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "app_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instanceGroups/app-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-10-31T02:02:13.658-07:00",
            "enable_cdn": false,
            "fingerprint": "QTp9S7zH8o8=",
            "generated_id": 8075295305683813882,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/healthChecks/app-health-check"
            ],
            "id": "projects/skillbox-devops-basic/global/backendServices/app-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-backend-service",
            "port_name": "http",
            "project": "skillbox-devops-basic",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/backendServices/app-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.app_health_check",
            "google_compute_instance.app_server",
            "google_compute_instance_group.app_instance_group",
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instanceGroups/app-instance-group-prod",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-11-07T02:36:03.006-08:00",
            "enable_cdn": false,
            "fingerprint": "OM6cqyhHRHI=",
            "generated_id": 6123745089314387325,
            "health_checks": [
              "projects/skillbox-devops-basic/global/healthChecks/app-health-check-prod"
            ],
            "id": "projects/skillbox-devops-basic/global/backendServices/backend-prod",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-prod",
            "port_name": "http",
            "project": "skillbox-devops-basic",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/backendServices/backend-prod",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet",
            "module.app_server_prod.google_compute_health_check.app_health_check",
            "module.app_server_prod.google_compute_instance.app_server",
            "module.app_server_prod.google_compute_instance_group.app_instance_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instanceGroups/app-instance-group-staging",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-11-07T02:35:53.074-08:00",
            "enable_cdn": false,
            "fingerprint": "XAmd1zOmzMU=",
            "generated_id": 4085560164199986534,
            "health_checks": [
              "projects/skillbox-devops-basic/global/healthChecks/app-health-check-staging"
            ],
            "id": "projects/skillbox-devops-basic/global/backendServices/backend-staging",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-staging",
            "port_name": "http",
            "project": "skillbox-devops-basic",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/backendServices/backend-staging",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet",
            "module.app_server_staging.google_compute_health_check.app_health_check",
            "module.app_server_staging.google_compute_instance.app_server",
            "module.app_server_staging.google_compute_instance_group.app_instance_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-31T22:28:13.612-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skillbox-devops-basic/global/firewalls/allow-health-check",
            "log_config": [],
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
            "priority": 1000,
            "project": "skillbox-devops-basic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/firewalls/allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-31T22:28:13.624-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skillbox-devops-basic/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
            "priority": 1000,
            "project": "skillbox-devops-basic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-31T22:28:13.728-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skillbox-devops-basic/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
            "priority": 1000,
            "project": "skillbox-devops-basic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_monitoring_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "3000",
                  "9090",
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-04T21:49:29.345-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skillbox-devops-basic/global/firewalls/allow-monitoring-traffic",
            "log_config": [],
            "name": "allow-monitoring-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
            "priority": 1000,
            "project": "skillbox-devops-basic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/firewalls/allow-monitoring-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "grafana",
              "monitoring"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-31T22:28:13.706-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skillbox-devops-basic/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
            "priority": 1000,
            "project": "skillbox-devops-basic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "app_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.8.238.148",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-10-31T22:28:13.661-07:00",
            "id": "projects/skillbox-devops-basic/global/addresses/app-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "app-lb-ip",
            "prefix_length": 0,
            "project": "skillbox-devops-basic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/addresses/app-lb-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "app_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/skillbox-devops-basic/global/forwardingRules/app-forwarding-rule",
            "ip_address": "34.8.241.140",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-forwarding-rule",
            "port_range": "80-80",
            "project": "skillbox-devops-basic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/forwardingRules/app-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/targetHttpProxies/app-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend_prod",
            "google_compute_backend_service.backend_staging",
            "google_compute_global_address.app_lb_ip",
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet",
            "google_compute_target_http_proxy.app_http_proxy",
            "google_compute_url_map.app_url_map",
            "module.app_server_prod.google_compute_health_check.app_health_check",
            "module.app_server_prod.google_compute_instance.app_server",
            "module.app_server_prod.google_compute_instance_group.app_instance_group",
            "module.app_server_staging.google_compute_health_check.app_health_check",
            "module.app_server_staging.google_compute_instance.app_server",
            "module.app_server_staging.google_compute_instance_group.app_instance_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251023",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/disks/app-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skillbox-devops-basic/zones/us-west4-c/instances/app-server",
            "instance_id": "1116027300528792909",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCocyxZxX2E7Y8iAn8rAevDz1M4/pNkgTgbiASHWnNuaDV7ZIZraU7z21Q+UTXASwlzK0YjoIEAVxcSTENyG04OjVqzGU8y1AB4LjtOq15ULm+qNLkG8iSrVshD838wq3W9WP4lcKfCtifE3GUB66OyfdGiTLHoT6RkIkOzkGgRqm/S+Kc4f1fP66C8EisyS5/YHVl/1BrcjJNIyvyxhVX24kFWQaMsvoh5UZXHtowG2agdx93MB58Umzxg+ZgmrJ+rNhQPuQI89O1fnZct7A459OM2clpmNPlQu09StvKyGyPK3Wb8x7rbEm1t/OQ0ejrROA0osa0H6d0UfNVULje0EjAT9xjHYL4kdtAV0ZyFJGUxO4LZBgvgKEwdKy8vFmmjLHSHa0WWPI4FqEFQZPCzqX3Ro9COxGUI8ja5KjIrVv [...]
            },
            "metadata_fingerprint": "YOsdKnizvgQ=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\n",
            "name": "app-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.186.24.52",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/regions/us-west4/subnetworks/app-subnet",
                "subnetwork_project": "skillbox-devops-basic"
              }
            ],
            "project": "skillbox-devops-basic",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instances/app-server",
            "service_account": [
              {
                "email": "1058077648735-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh-server"
            ],
            "tags_fingerprint": "nBrWn2vdQv8=",
            "zone": "us-west4-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gitlab-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251023",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/disks/gitlab-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skillbox-devops-basic/zones/us-west4-c/instances/gitlab-server",
            "instance_id": "3904343197490873993",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC... maxpack2030@gmail.com"
            },
            "metadata_fingerprint": "uQ4tuKnR5Ig=",
            "name": "gitlab-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.50.169.169",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
                "network_ip": "10.0.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/regions/us-west4/subnetworks/app-subnet",
                "subnetwork_project": "skillbox-devops-basic"
              }
            ],
            "project": "skillbox-devops-basic",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instances/gitlab-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh-server"
            ],
            "tags_fingerprint": "nBrWn2vdQv8=",
            "zone": "us-west4-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "grafana_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251023",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/disks/grafana-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skillbox-devops-basic/zones/us-west4-c/instances/grafana-vm",
            "instance_id": "110758529516129079",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCocyxZxX2E7Y8iAn8rAevDz1M4/pNkgTgbiASHWnNuaDV7ZIZraU7z21Q+UTXASwlzK0YjoIEAVxcSTENyG04OjVqzGU8y1AB4LjtOq15ULm+qNLkG8iSrVshD838wq3W9WP4lcKfCtifE3GUB66OyfdGiTLHoT6RkIkOzkGgRqm/S+Kc4f1fP66C8EisyS5/YHVl/1BrcjJNIyvyxhVX24kFWQaMsvoh5UZXHtowG2agdx93MB58Umzxg+ZgmrJ+rNhQPuQI89O1fnZct7A459OM2clpmNPlQu09StvKyGyPK3Wb8x7rbEm1t/OQ0ejrROA0osa0H6d0UfNVULje0EjAT9xjHYL4kdtAV0ZyFJGUxO4LZBgvgKEwdKy8vFmmjLHSHa0WWPI4FqEFQZPCzqX3Ro9COxGUI8ja5KjIrVv [...]
            },
            "metadata_fingerprint": "5FJiVO2mIU0=",
            "name": "grafana-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.16.186.65",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
                "network_ip": "10.0.1.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/regions/us-west4/subnetworks/app-subnet",
                "subnetwork_project": "skillbox-devops-basic"
              }
            ],
            "project": "skillbox-devops-basic",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instances/grafana-vm",
            "service_account": [
              {
                "email": "1058077648735-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "grafana",
              "ssh-server"
            ],
            "tags_fingerprint": "ylxPrR7m-vg=",
            "zone": "us-west4-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prometheus_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251023",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/disks/prometheus-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skillbox-devops-basic/zones/us-west4-c/instances/prometheus-vm",
            "instance_id": "5419931822176295812",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCocyxZxX2E7Y8iAn8rAevDz1M4/pNkgTgbiASHWnNuaDV7ZIZraU7z21Q+UTXASwlzK0YjoIEAVxcSTENyG04OjVqzGU8y1AB4LjtOq15ULm+qNLkG8iSrVshD838wq3W9WP4lcKfCtifE3GUB66OyfdGiTLHoT6RkIkOzkGgRqm/S+Kc4f1fP66C8EisyS5/YHVl/1BrcjJNIyvyxhVX24kFWQaMsvoh5UZXHtowG2agdx93MB58Umzxg+ZgmrJ+rNhQPuQI89O1fnZct7A459OM2clpmNPlQu09StvKyGyPK3Wb8x7rbEm1t/OQ0ejrROA0osa0H6d0UfNVULje0EjAT9xjHYL4kdtAV0ZyFJGUxO4LZBgvgKEwdKy8vFmmjLHSHa0WWPI4FqEFQZPCzqX3Ro9COxGUI8ja5KjIrVv [...]
            },
            "metadata_fingerprint": "5FJiVO2mIU0=",
            "name": "prometheus-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.163.11",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
                "network_ip": "10.0.1.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/regions/us-west4/subnetworks/app-subnet",
                "subnetwork_project": "skillbox-devops-basic"
              }
            ],
            "project": "skillbox-devops-basic",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instances/prometheus-vm",
            "service_account": [
              {
                "email": "1058077648735-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "monitoring",
              "ssh-server"
            ],
            "tags_fingerprint": "sL9fYsgDnhw=",
            "zone": "us-west4-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "app_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/skillbox-devops-basic/global/networks/app-network",
            "mtu": 0,
            "name": "app-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4151999103496733732",
            "project": "skillbox-devops-basic",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "app_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-31T22:28:14.472-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/skillbox-devops-basic/regions/us-west4/routers/app-router",
            "name": "app-router",
            "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
            "project": "skillbox-devops-basic",
            "region": "us-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/regions/us-west4/routers/app-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "app_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "skillbox-devops-basic/us-west4/app-router/app-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "app-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "skillbox-devops-basic",
            "region": "us-west4",
            "router": "app-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network",
            "google_compute_router.app_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-31T02:01:12.687-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/skillbox-devops-basic/regions/us-west4/subnetworks/app-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skillbox-devops-basic",
            "purpose": "PRIVATE",
            "region": "us-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/regions/us-west4/subnetworks/app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "app_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-31T02:03:26.829-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/skillbox-devops-basic/global/targetHttpProxies/app-http-proxy",
            "name": "app-http-proxy",
            "project": "skillbox-devops-basic",
            "proxy_bind": false,
            "proxy_id": 744329199961621937,
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/targetHttpProxies/app-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/urlMaps/app-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend_prod",
            "google_compute_backend_service.backend_staging",
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet",
            "google_compute_url_map.app_url_map",
            "module.app_server_prod.google_compute_health_check.app_health_check",
            "module.app_server_prod.google_compute_instance.app_server",
            "module.app_server_prod.google_compute_instance_group.app_instance_group",
            "module.app_server_staging.google_compute_health_check.app_health_check",
            "module.app_server_staging.google_compute_instance.app_server",
            "module.app_server_staging.google_compute_instance_group.app_instance_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "app_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-31T02:03:13.499-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/backendServices/app-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "yV9guloTf4U=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/skillbox-devops-basic/global/urlMaps/app-url-map",
            "map_id": 3029228780408915390,
            "name": "app-url-map",
            "path_matcher": [],
            "project": "skillbox-devops-basic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/urlMaps/app-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.app_backend",
            "google_compute_backend_service.backend_prod",
            "google_compute_backend_service.backend_staging",
            "google_compute_health_check.app_health_check",
            "google_compute_instance.app_server",
            "google_compute_instance_group.app_instance_group",
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet",
            "module.app_server_prod.google_compute_health_check.app_health_check",
            "module.app_server_prod.google_compute_instance.app_server",
            "module.app_server_prod.google_compute_instance_group.app_instance_group",
            "module.app_server_staging.google_compute_health_check.app_health_check",
            "module.app_server_staging.google_compute_instance.app_server",
            "module.app_server_staging.google_compute_instance_group.app_instance_group"
          ]
        }
      ]
    },
    {
      "module": "module.app_server_prod",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251023",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/disks/app-server-prod"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skillbox-devops-basic/zones/us-west4-c/instances/app-server-prod",
            "instance_id": "9087685574854210949",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCocyxZxX2E7Y8iAn8rAevDz1M4/pNkgTgbiASHWnNuaDV7ZIZraU7z21Q+UTXASwlzK0YjoIEAVxcSTENyG04OjVqzGU8y1AB4LjtOq15ULm+qNLkG8iSrVshD838wq3W9WP4lcKfCtifE3GUB66OyfdGiTLHoT6RkIkOzkGgRqm/S+Kc4f1fP66C8EisyS5/YHVl/1BrcjJNIyvyxhVX24kFWQaMsvoh5UZXHtowG2agdx93MB58Umzxg+ZgmrJ+rNhQPuQI89O1fnZct7A459OM2clpmNPlQu09StvKyGyPK3Wb8x7rbEm1t/OQ0ejrROA0osa0H6d0UfNVULje0EjAT9xjHYL4kdtAV0ZyFJGUxO4LZBgvgKEwdKy8vFmmjLHSHa0WWPI4FqEFQZPCzqX3Ro9COxGUI8ja5KjIrVv [...]
            },
            "metadata_fingerprint": "5FJiVO2mIU0=",
            "name": "app-server-prod",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.16.171.67",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
                "network_ip": "10.0.1.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/regions/us-west4/subnetworks/app-subnet",
                "subnetwork_project": "skillbox-devops-basic"
              }
            ],
            "project": "skillbox-devops-basic",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instances/app-server-prod",
            "service_account": [
              {
                "email": "1058077648735-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "prod",
              "ssh-server"
            ],
            "tags_fingerprint": "BM5W8fTHQ6s=",
            "zone": "us-west4-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_server_staging",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251023",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/disks/app-server-staging"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skillbox-devops-basic/zones/us-west4-c/instances/app-server-staging",
            "instance_id": "2445564977107465604",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCocyxZxX2E7Y8iAn8rAevDz1M4/pNkgTgbiASHWnNuaDV7ZIZraU7z21Q+UTXASwlzK0YjoIEAVxcSTENyG04OjVqzGU8y1AB4LjtOq15ULm+qNLkG8iSrVshD838wq3W9WP4lcKfCtifE3GUB66OyfdGiTLHoT6RkIkOzkGgRqm/S+Kc4f1fP66C8EisyS5/YHVl/1BrcjJNIyvyxhVX24kFWQaMsvoh5UZXHtowG2agdx93MB58Umzxg+ZgmrJ+rNhQPuQI89O1fnZct7A459OM2clpmNPlQu09StvKyGyPK3Wb8x7rbEm1t/OQ0ejrROA0osa0H6d0UfNVULje0EjAT9xjHYL4kdtAV0ZyFJGUxO4LZBgvgKEwdKy8vFmmjLHSHa0WWPI4FqEFQZPCzqX3Ro9COxGUI8ja5KjIrVv [...]
            },
            "metadata_fingerprint": "5FJiVO2mIU0=",
            "name": "app-server-staging",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.205.177",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/global/networks/app-network",
                "network_ip": "10.0.1.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/regions/us-west4/subnetworks/app-subnet",
                "subnetwork_project": "skillbox-devops-basic"
              }
            ],
            "project": "skillbox-devops-basic",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillbox-devops-basic/zones/us-west4-c/instances/app-server-staging",
            "service_account": [
              {
                "email": "1058077648735-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh-server",
              "staging"
            ],
            "tags_fingerprint": "jbhTPvK4tRI=",
            "zone": "us-west4-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.app_network",
            "google_compute_subnetwork.app_subnet"
          ]
        }
      ]
    }
  ]
}